# backend/schema/swagger.json
@@ -317,6 +317,11 @@
 				"$ref": "./paths/reports/hosts/get.json"
 			}
 		},
+		"/reports/proxy-hosts/{hostID}/metrics": {
+			"get": {
+				"$ref": "./paths/reports/proxy-hosts/id/metrics/get.json"
+			}
+		},
 		"/schema": {
 			"get": {
 				"$ref": "./paths/schema/get.json"
